# llm-inference-and-distributed-training

./: CLAUDE.md  pyproject.toml
calcs/01_bottleneck_analysis/: memory_bandwidth.md
inference/01_bottleneck_analysis/: kv_cache_calculator.py
inference/02_quantization/: README.md  RUN_IN_POD.md  benchmark_awq.py  benchmark_baseline.py  benchmark_bnb.py  benchmark_gptq.py  benchmark_utils.py  compare_results.py  quantization_methods.md  quantize_gptq.py  results_baseline_bf16.json
inference/02_quantization/results/: results_awq.json  results_bnb.json  results_gptq.json
inference/03_attention/: README.md  visualize_attention.py
