[project]
name = "llm-inference-and-distributed-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4,<2.5",
    "transformers>=4.44,<4.45",
    "accelerate",
    "bitsandbytes>=0.43,<0.44",
    "auto-gptq; sys_platform == 'linux'",
    "autoawq",
    "peft",
    "datasets",
    "wandb",
    "matplotlib",
    "pandas",
]

[dependency-groups]
dev = [
    "pyright",
    "ruff",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]

override-dependencies = [
    "triton>=3.0; sys_platform == 'linux'",
]

no-build-isolation-package = ["auto-gptq"]