[project]
name = "llm-inference-and-distributed-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "transformers>=4.48",
    "accelerate>=1.2",
    "bitsandbytes>=0.45",
    "autoawq",
    "peft",
    "datasets",
    "wandb",
    "matplotlib",
    "pandas",
    "optimum>=2.1.0",
]

[dependency-groups]
dev = [
    "pyright",
    "ruff",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]

override-dependencies = [
    "triton>=3.0; sys_platform == 'linux'",
]

